<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColour"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Login">

    <ImageView
        android:id="@+id/logid"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/icon7_login"
        android:transitionName="logo_image" />

    <TextView
        android:id="@+id/logtopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee"
        android:text="@string/topic"
        android:textSize="32dp"
        android:transitionName="logo_text2" />

    <TextView
        android:id="@+id/topic2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topic2"
        android:textSize="20dp"
        android:transitionName="tocontinu_tran" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/uname"
            android:transitionName="username_trans">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pw"
            android:transitionName="password_trans"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:background="@android:color/transparent"
            android:elevation="0dp"
            android:text="@string/forgetpw"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_to_home_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@color/accentColour"
            android:text="@string/btn_sign_in"
            android:textColor="@color/primaryColour"
            android:transitionName="btn_Go_trans" />

        <Button
            android:id="@+id/SignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:background="@android:color/transparent"
            android:elevation="0dp"
            android:text="@string/sign_upline"
            android:textColor="@color/black"
            android:transitionName="login_signup_trans" />

    </LinearLayout>


</LinearLayout>