<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/appName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:fontFamily="@font/bungee"
                    android:text="@string/app_name"
                    android:textColor="@color/primaryColour"
                    android:textSize="25dp"/>

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/flower_logo"/>
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/navigationBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header"
            android:background="@color/accentColour"
            android:orientation="horizontal">

            <Button
                android:id="@+id/home"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1.5"
                android:gravity="center"
                android:text="@string/home"
                android:textColor="@color/primaryColour"
                android:textSize="18dp"
                android:background="@color/accentColour"
                android:layout_margin="5dp"/>

            <Button
                android:id="@+id/category"
                android:layout_width="10dp"
                android:layout_height="45dp"
                android:layout_weight="1.5"
                android:gravity="center"
                android:text="@string/category"
                android:textColor="@color/primaryColour"
                android:textSize="18dp"
                android:background="@color/accentColour"
                android:layout_margin="5dp"/>

            <Button
                android:id="@+id/profile"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1.5"
                android:gravity="center"
                android:text="@string/profile"
                android:textColor="@color/primaryColour"
                android:textSize="18dp"
                android:background="@color/accentColour"
                android:layout_margin="5dp"/>
        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            tools:context=".UserProfile">

            <RelativeLayout
                android:id="@+id/profile_top"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/secondaryColour">

                <ImageView
                    android:id="@+id/profile_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/profile_photo" />

                <TextView
                    android:id="@+id/full_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="5dp"
                    android:layout_toRightOf="@id/profile_image"
                    android:fontFamily="@font/bungee"
                    android:text="@string/fullnAns"
                    android:textSize="25dp" />

                <Button
                    android:id="@+id/logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="LogOut"
                    android:fontFamily="@font/brawler"
                    android:textColor="@color/primaryColour"
                    android:background="@color/accentColour2"
                    android:layout_alignRight="@id/full_name"
                    android:layout_below="@id/full_name"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.navigation.NavigationView
                    android:layout_width="match_parent"
                    android:layout_height="125dp"
                    android:layout_margin="10dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/accentColour" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/accentColour"
                        android:padding="10dp">

                        <ImageView
                            android:id="@+id/go_to_cart"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/shoppingcart" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="10dp"
                            android:fontFamily="@font/brawler"
                            android:paddingTop="10dp"
                            android:text="@string/cartslogan"
                            android:textColor="@color/primaryColour"
                            android:textSize="20dp" />
                    </RelativeLayout>

                </com.google.android.material.navigation.NavigationView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/secondaryColour"
                android:orientation="vertical"
                android:padding="25dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fullNameSU">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fullnAns" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/emailSU">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/emailAns" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/addSU">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/addAns" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/pnoSU">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pnoAns" />
                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <Button
                    android:id="@+id/btn_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/accentColour2"
                    android:fontFamily="@font/bungee"
                    android:text="@string/btn_update" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <Button
                    android:id="@+id/btn_delete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/accentColour2"
                    android:fontFamily="@font/bungee"
                    android:text="@string/btn_delete" />
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
